add pr_black_cat | pr_i_like_me_better

--- a/index.html
+++ b/index.html
@@ -651,7 +651,12 @@
             <div class="card-box">
               <h3>I Like Me Better – Graphic Music Video</h3>
               <p>Motion Graphic / Illustration</p>
-              <button class="btn">See Project</button>
+              <button
+                class="btn"
+                onclick="window.open('project_i_like_me_better.html', '_blank')"
+              >
+                See Project
+              </button>
             </div>
           </div>
         </div>
@@ -713,7 +718,12 @@
             <div class="card-box">
               <h3>Black Cat - Storytelling Video</h3>
               <p>Motion Graphic / Illustration</p>
-              <button class="btn">See Project</button>
+              <button
+                class="btn"
+                onclick="window.open('project_black_cat.html', '_blank')"
+              >
+                See Project
+              </button>
             </div>
           </div>
         </div>
