add slide content pr_cat, pr_ilikeme

--- a/project_black_cat.html
+++ b/project_black_cat.html
@@ -383,15 +383,13 @@
       <div class="thumbs">
         <div class="slidetext" id="slidetext">
           <h1>01</h1>
-          <p>
-            Experience the serene beauty and tranquility of the natural world.
-          </p>
+          <p>Intro frame of the Black Cat concept.</p>
         </div>
         <div class="thumb-wrapper">
           <div
             class="thumb active"
             style="
-              background-image: url('assets/img/slm.png');
+              background-image: url('assets/img/3bd5e42576383844d2f224e5d99215a76b0366a7.png');
               background-size: cover;
               background-position: center;
             "
@@ -402,7 +400,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl2.png');
+              background-image: url('assets/img/d0a1a1ce708e67f717fa7759bcefad74860f30d0.png');
               background-size: cover;
               background-position: center;
             "
@@ -413,7 +411,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl3.png');
+              background-image: url('assets/img/4185cdadf30006e282429bfe202da36863d79519 (1).png');
               background-size: cover;
               background-position: center;
             "
@@ -424,7 +422,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl4.png');
+              background-image: url('assets/img/495f4ac79e7118948c96be4a532d1e3eada80d71.png');
               background-size: cover;
               background-position: center;
             "
@@ -435,7 +433,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl5.png');
+              background-image: url('assets/img/78208bf24eb79ff2b2e325e5bcba905240e13a39.png');
               background-size: cover;
               background-position: center;
             "
@@ -446,7 +444,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl6.png');
+              background-image: url('assets/img/f019d7b3dd8e29d6822859566019e84fc9020186.png');
               background-size: cover;
               background-position: center;
             "
@@ -457,7 +455,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl7.png');
+              background-image: url('assets/img/f9236c7fd3650318b4d17b9934dbe53315a1e0c0.png');
               background-size: cover;
               background-position: center;
             "
@@ -471,7 +469,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/slm.png');
+              background-image: url('assets/img/3bd5e42576383844d2f224e5d99215a76b0366a7.png');
               background-size: cover;
               background-position: center;
             "
@@ -479,7 +477,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl2.png');
+              background-image: url('assets/img/d0a1a1ce708e67f717fa7759bcefad74860f30d0.png');
               background-size: cover;
               background-position: center;
             "
@@ -487,7 +485,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl3.png');
+              background-image: url('assets/img/4185cdadf30006e282429bfe202da36863d79519 (1).png');
               background-size: cover;
               background-position: center;
             "
@@ -495,7 +493,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl4.png');
+              background-image: url('assets/img/495f4ac79e7118948c96be4a532d1e3eada80d71.png');
               background-size: cover;
               background-position: center;
             "
@@ -503,7 +501,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl5.png');
+              background-image: url('assets/img/78208bf24eb79ff2b2e325e5bcba905240e13a39.png');
               background-size: cover;
               background-position: center;
             "
@@ -511,7 +509,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl6.png');
+              background-image: url('assets/img/f019d7b3dd8e29d6822859566019e84fc9020186.png');
               background-size: cover;
               background-position: center;
             "
@@ -519,7 +517,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl7.png');
+              background-image: url('assets/img/f9236c7fd3650318b4d17b9934dbe53315a1e0c0.png');
               background-size: cover;
               background-position: center;
             "
@@ -1148,31 +1146,31 @@
       const slidesData = [
         {
           title: "01",
-          desc: "Experience the serene beauty and tranquility of the natural world.",
+          desc: "Intro frame of the Black Cat concept.",
         },
         {
           title: "02",
-          desc: "Dive into a realm of imagination with thought-provoking abstract designs.",
+          desc: "Eye reveal synced to the rhythm.",
         },
         {
           title: "03",
-          desc: "Explore the diverse cultures that make up our global tapestry.",
+          desc: "Silhouette showing intuition in the dark.",
         },
         {
           title: "04",
-          desc: "Immerse yourself in the captivating depths and mysteries of the ocean.",
+          desc: "Rhythm-driven motion transition.",
         },
         {
           title: "05",
-          desc: "Witness the awe-inspiring power and majesty of volcanic eruptions.",
+          desc: "Abstract shapes and light pulses.",
         },
         {
           title: "06",
-          desc: "Witness the awe-inspiring power and majesty of volcanic eruptions.",
+          desc: "Kinetic typography moment.",
         },
         {
           title: "07",
-          desc: "Witness the awe-inspiring power and majesty of volcanic eruptions.",
+          desc: "Final closing frame.",
         },
       ];
 
