--- a/project_i_like_me_better.html
+++ b/project_i_like_me_better.html
@@ -436,15 +436,13 @@
       <div class="thumbs">
         <div class="slidetext" id="slidetext">
           <h1>01</h1>
-          <p>
-            Experience the serene beauty and tranquility of the natural world.
-          </p>
+          <p>Intro frame setting the mood.</p>
         </div>
         <div class="thumb-wrapper">
           <div
             class="thumb active"
             style="
-              background-image: url('assets/img/slm.png');
+              background-image: url('assets/img/e173e79b0b59cb8489d7f7c13b979f3dfe7e81b9.png');
               background-size: cover;
               background-position: center;
             "
@@ -455,7 +453,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl2.png');
+              background-image: url('assets/img/a80da3be897ca1eac23aa09b7d6e2d5695808030.png');
               background-size: cover;
               background-position: center;
             "
@@ -466,7 +464,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl3.png');
+              background-image: url('assets/img/831a9fabed4685f8fb1f36caf59f75d9b67343d0.png');
               background-size: cover;
               background-position: center;
             "
@@ -477,7 +475,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl4.png');
+              background-image: url('assets/img/8898165e119a75b2539d41c0fab4f4c4a4fb748e.png');
               background-size: cover;
               background-position: center;
             "
@@ -488,7 +486,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl5.png');
+              background-image: url('assets/img/2314b3dddbbbd2a2312ea706da83120ef97fc897.png');
               background-size: cover;
               background-position: center;
             "
@@ -499,7 +497,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl6.png');
+              background-image: url('assets/img/cfd5b57b7b633bd3612100ad6583c7e13cffadb4.png');
               background-size: cover;
               background-position: center;
             "
@@ -510,7 +508,7 @@
           <div
             class="thumb"
             style="
-              background-image: url('assets/img/sl7.png');
+              background-image: url('assets/img/73e31d08bff1ae9a98ec395ab948c3edfe901f12.png');
               background-size: cover;
               background-position: center;
             "
@@ -524,7 +522,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/slm.png');
+              background-image: url('assets/img/e173e79b0b59cb8489d7f7c13b979f3dfe7e81b9.png');
               background-size: cover;
               background-position: center;
             "
@@ -532,7 +530,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl2.png');
+              background-image: url('assets/img/a80da3be897ca1eac23aa09b7d6e2d5695808030.png');
               background-size: cover;
               background-position: center;
             "
@@ -540,7 +538,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl3.png');
+              background-image: url('assets/img/831a9fabed4685f8fb1f36caf59f75d9b67343d0.png');
               background-size: cover;
               background-position: center;
             "
@@ -548,7 +546,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl4.png');
+              background-image: url('assets/img/8898165e119a75b2539d41c0fab4f4c4a4fb748e.png');
               background-size: cover;
               background-position: center;
             "
@@ -556,7 +554,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl5.png');
+              background-image: url('assets/img/2314b3dddbbbd2a2312ea706da83120ef97fc897.png');
               background-size: cover;
               background-position: center;
             "
@@ -564,7 +562,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl6.png');
+              background-image: url('assets/img/cfd5b57b7b633bd3612100ad6583c7e13cffadb4.png');
               background-size: cover;
               background-position: center;
             "
@@ -572,7 +570,7 @@
           <div
             class="slidex"
             style="
-              background-image: url('assets/img/sl7.png');
+              background-image: url('assets/img/73e31d08bff1ae9a98ec395ab948c3edfe901f12.png');
               background-size: cover;
               background-position: center;
             "
@@ -1203,31 +1201,31 @@
       const slidesData = [
         {
           title: "01",
-          desc: "Experience the serene beauty and tranquility of the natural world.",
+          desc: "Intro frame setting the mood.",
         },
         {
           title: "02",
-          desc: "Dive into a realm of imagination with thought-provoking abstract designs.",
+          desc: "Soft color transition synced to the beat.",
         },
         {
           title: "03",
-          desc: "Explore the diverse cultures that make up our global tapestry.",
+          desc: "Character moment expressing warmth and connection.",
         },
         {
           title: "04",
-          desc: "Immerse yourself in the captivating depths and mysteries of the ocean.",
+          desc: "Rhythm-driven scene shift reflecting emotional buildup.",
         },
         {
           title: "05",
-          desc: "Witness the awe-inspiring power and majesty of volcanic eruptions.",
+          desc: " Typography pulse timed with the chorus.",
         },
         {
           title: "06",
-          desc: "Witness the awe-inspiring power and majesty of volcanic eruptions.",
+          desc: "Abstract shapes visualizing comfort and nostalgia.",
         },
         {
           title: "07",
-          desc: "Witness the awe-inspiring power and majesty of volcanic eruptions.",
+          desc: "Final frame closing.",
         },
       ];
 
