--- a/project_street.html
+++ b/project_street.html
@@ -215,7 +215,7 @@
         <p class="question-text">Access control and attendee identity, with the slogan “Where style meets culture”</p>
         <div class="dot"></div>
         <div class="apply-card-image">
-          <img src="assets/img/de2.png" alt="Q3 Image">
+          <img src="assets/img/coffeecupmockup.png" alt="Q3 Image">
         </div>
       </div>
     </div>
@@ -298,7 +298,7 @@
     <div class="thumbs">
       <div class="slidetext" id="slidetext">
         <h1>01</h1>
-        <p>Experience the serene beauty and tranquility of the natural world.</p>
+        <p>Cover page introducing the Street Pulse event branding.</p>
       </div>
       <div class="thumb-wrapper">
         <div class="thumb active"
@@ -425,13 +425,13 @@
     const slideText = document.getElementById('slidetext');
 
     const slidesData = [
-      { title: '01', desc: 'Experience the serene beauty and tranquility of the natural world.' },
-      { title: '02', desc: 'Dive into a realm of imagination with thought-provoking abstract designs.' },
-      { title: '03', desc: 'Explore the diverse cultures that make up our global tapestry.' },
-      { title: '04', desc: 'Immerse yourself in the captivating depths and mysteries of the ocean.' },
-      { title: '05', desc: 'Witness the awe-inspiring power and majesty of volcanic eruptions.' },
-      { title: '06', desc: 'Witness the awe-inspiring power and majesty of volcanic eruptions.' },
-      { title: '07', desc: 'Witness the awe-inspiring power and majesty of volcanic eruptions.' },
+      { title: '01', desc: 'Cover page introducing the Street Pulse event branding.' },
+      { title: '02', desc: 'Table of contents outlining the event materials and sections.' },
+      { title: '03', desc: 'Event schedule showcasing the lineup and program details.' },
+      { title: '04', desc: 'Featured performers and speakers highlighted for the event.' },
+      { title: '05', desc: 'Sponsor acknowledgments and partner highlights.' },
+      { title: '06', desc: 'Contact information and social media pages for the event.' },
+      { title: '07', desc: 'Final promotional visual showcasing the event theme and atmosphere.' },
     ];
 
     let currentIndex = 0;
