--- a/target.html
+++ b/target.html
@@ -375,7 +375,7 @@
   </section>
 
   <!--  Project Examples  -->
-  <section style="margin-top: -30px;" class="featured-projects">
+  <!-- <section style="margin-top: -30px;" class="featured-projects">
     <div class="section-title">
       <span>Project Examples</span>
       <img src="assets/img/arrow-handdrawn.png" alt="arrow" class="arrow-icon">
@@ -405,7 +405,7 @@
         <button class="btn"><span>See Project</span></button>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="learned-section">
     <div class="section-title">
