--- a/target.html
+++ b/target.html
@@ -51,7 +51,7 @@
               <i class="fab fa-linkedin"></i>
             </a>
 
-            <a href="https://www.instagram.com" target="_blank" class="clickable"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:helenvo0932@gmail.com" target="_blank" class="clickable"><i class="fa-regular fa-envelope"></i></a>
           </div>
           <a href="#" class="clickable hire-btn">Hire Me!</a>
         </nav>
@@ -441,7 +441,7 @@
           <a href="https://ca.linkedin.com/in/helenvodesign" target="_blank" class="clickable">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="https://www.instagram.com" target="_blank" class="clickable"><i class="fab fa-instagram"></i></a>
+          <a href="mailto:helenvo0932@gmail.com" target="_blank" class="clickable"><i class="fa-regular fa-envelope"></i></a>
         </div>
       </div>
       <h1 class="footer-title">Ready to Bring Your Vision to Life?</h1>
