--- a/project_i_like_me_better.html
+++ b/project_i_like_me_better.html
@@ -85,10 +85,10 @@
               </a>
 
               <a
-                href="https://www.instagram.com"
+                href="mailto:helenvo0932@gmail.com"
                 target="_blank"
                 class="clickable"
-                ><i class="fab fa-instagram"></i
+                ><i class="fa-regular fa-envelope"></i
               ></a>
             </div>
             <a href="#" class="clickable hire-btn">Hire Me!</a>
@@ -757,10 +757,10 @@
               <i class="fab fa-linkedin"></i>
             </a>
             <a
-              href="https://www.instagram.com"
+              href="mailto:helenvo0932@gmail.com"
               target="_blank"
               class="clickable"
-              ><i class="fab fa-instagram"></i
+              ><i class="fa-regular fa-envelope"></i
             ></a>
           </div>
         </div>
